fix: lazy Prisma client initialization for Vercel build

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,11 @@
 # Copy this file to .env.local and fill in your values
 
 # =============================================
-# DATABASE
+# DATABASE (Vercel Postgres)
 # =============================================
-DATABASE_URL="file:./dev.db"
+# Get these from your Vercel dashboard after creating a Postgres database
+POSTGRES_PRISMA_URL="postgresql://user:password@host:5432/database?sslmode=require&pgbouncer=true"
+POSTGRES_URL_NON_POOLING="postgresql://user:password@host:5432/database?sslmode=require"
 
 # =============================================
 # AUTHENTICATION (NextAuth.js)
